[package]
name = "dirhash_fast"
version = "0.1.0"
edition = "2021"
authors = ["Arno Waschk"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arnowaschk/dirhash_fast"
readme = "README.md"
keywords = ["directory", "hashing", "BLAKE3", "parallel", "cryptography"]
categories = ["monitoring", "filesystem", "algorithms", "concurrency", "cryptography", "efficiency","tool"]

exclude = [
    ".gitignore",
    ".github/",
    "patches/",
    "target/",
    "Cargo.lock",
    "tests/",
    "scripts/",
    "examples/",
    "docs/",
    "up",
    "*.rej",           # Exclude shell scripts
    "*.log",          # Exclude log files
    "*.tmp",          # Exclude temporary files
]

[dependencies]
blake3 = "1"
rayon = "1"
tempfile = "3"
walkdir = "2.5"

